--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,32 @@
+# Windows thumbnail cache files
+Thumbs.db
+ehthumbs.db
+ehthumbs_vista.db
+# macOS
+.DS_Store
+# Folder config file
+Desktop.ini
+# Recycle Bin used on file shares
+$RECYCLE.BIN/
+# Windows Installer files
+*.cab
+*.msi
+*.msm
+*.msp
+# Windows shortcuts
+*.lnk
+# Logs
+logs
+*.log
+
 #node_modules
 node_modules
-package-lock.jsonnode_modules
+
+package-lock.json
+
+
+# =========================
+# Operating System Files
+# =========================
+*.zip
+*.sql
