--- a/.gitignore
+++ b/.gitignore
@@ -19,11 +19,10 @@ $RECYCLE.BIN/
 logs
 *.log
 
-#node_modules
+#Node modules
 node_modules
 
 package-lock.json
-
 
 # =========================
 # Operating System Files
